# qr-pack

./: Makefile  README.md  docker-compose.yaml
api/: Dockerfile  main.py  pyproject.toml
api/database/: database.py
api/models/: Container.py  Product.py  Transaction.py
api/query/: query.py
api/resolvers/: product_resolver.py
